--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-    "name": "com.captnjohn.ucommon-event-channels",
-    "displayName": "Unity Common Event Channels",
-    "version": "0.0.1-preview",
-    "unity": "2020.3",
-    "description": "Package for event channels to use for different type of events.",
-    "dependencies": {
-    },
-    "keywords": [
-      "events",
-      "eventchannels",
-      "ucommon"
-    ],
-    "license": "MIT",
-    "author": {
-      "name": "CaptnJohn",
-      "email": "jottossonta@gmail.com",
-      "url": "https://github.com/CaptnJohn"
-    },
-    "bugs": {
-      "url": "https://github.com/CaptnJohn/ucommon-event-channels/issues",
-      "email" : "jottossonta@gmail.com"
-    },
-    "repository": {
-      "type": "git",
-      "url": "ssh:/git@github.com:CaptnJohn/ucommon-event-channels.git"
-    }
+  "name": "com.ucommon.event-channels",
+  "displayName": "Unity Common Event Channels",
+  "version": "0.0.1-preview",
+  "unity": "2020.4",
+  "description": "Package for event channels to use for different type of events.",
+  "keywords": [
+    "events",
+    "eventchannels",
+    "ucommon"
+  ],
+  "license": "MIT",
+  "author": {
+    "name": "CaptnJohn",
+    "email": "jottossonta@gmail.com",
+    "url": "https://github.com/CaptnJohn"
+  },
+  "bugs": {
+    "url": "https://github.com/CaptnJohn/ucommon-event-channels/issues",
+    "email": "jottossonta@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "ssh:/git@github.com:CaptnJohn/ucommon-event-channels.git"
   }
+}
