- Added samples folder. - Added void event channel sample. - Updated package.json with void event channel sample. - Added samples asmdef.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "email": "jottossonta@gmail.com",
     "url": "https://github.com/CaptnJohn"
   },
+  "samples": [
+    {
+      "displayName": "Void Event Channel",
+      "description": "Contains sample for showcasing void event channel in action.",
+      "path": "Samples/VoidEventChannel"
+    },
+  ],
   "bugs": {
     "url": "https://github.com/CaptnJohn/ucommon-event-channels/issues",
     "email": "jottossonta@gmail.com"
