- Removed old class file. - Removed unneeded meta files. - Added one param event channel to file.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   "samples": [
     {
       "displayName": "Void Event Channel",
-      "description": "Contains sample for showcasing void event channel in action.",
+      "description": "Contains sample for showcasing void event channel.",
       "path": "Samples/VoidEventChannel"
+    },
+    {
+      "displayName": "One Parameter Event Channels",
+      "description": "Contains sample for showcasing event channels with one parameter.",
+      "path": "Samples/OneParamEventChannels"
     }
   ],
   "bugs": {
