--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@
 # Visual Studio cache directory
 .vs/
 
-/Runtime/*.meta
+/Runtime/Channels/*.cs.meta
+/Runtime/Core/*.cs.meta
+
 
 # Gradle cache directory
 .gradle/
